force-app/main/default/objects/SKU__c/SKU__c.object-meta.xml
<CustomObject>
    <label>SKU</label>
    <nameField>
        <label>SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>