force-app/main/default/objects/SKU__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>