force-app/main/default/objects/SKU__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <description>Optional stable identifier if one exists upstream (e.g., from a PLM/ERP system).</description>
    <externalId>true</externalId>
    <label>SKU Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>