force-app/main/default/objects/SKU__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>